fix(MenuBook): 상수 데이터 불변성 보장